# MOSAIC-LLM

./: README.md  main.ipynb  main.py  main_script.py  pyproject.toml  requirements.txt
data/: mosaicllm_results.csv  queries.csv
mosaic_llm/: mosaicllm.py
notebooks/: main.ipynb
prompts/: qo  query_optimization.txt  result_summarization.txt
